permanent.cloud/patch-set-solid-server-uri.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: life-server
spec:
  template:
    spec:
      containers:
      - name: life-server
