permanent.cloud/patch-use-email-variables.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: life-server
spec:
  template:
    spec:
      containers:
      - name: life-server
