permanent.cloud/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: permanent-app-http
spec:
  backend:
    serviceName: life-server
    servicePort: http
